Add alias "git ca" as "git commit --amend" to .gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -18,6 +18,7 @@
     l  = log --oneline
     m  = merge
     s  = status --short
+    ca = commit --amend
     co = checkout
     cp = cherry-pick
     dc = diff --cached
