Mac の日本語ファイルを文字化けしないように

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,6 +4,8 @@
 [core]
     excludesfile = ~/.gitignore
     autocrlf = input
+    quotepath = false
+    precomposeunicode = true
 [push]
     default = simple
 [gui]
