git cc で追跡していないファイルは変更があっても無視するように

--- a/.gitconfig
+++ b/.gitconfig
@@ -32,7 +32,7 @@
     rs = flow release start
     rf = flow release finish
     mc = !(git branch --merged | grep -v master | grep -v develop | grep -v \\* && git branch --all | grep remotes/origin/ | sed -e 's%remotes/origin/%%') | sort | uniq -d | xargs -I{} sh -c 'git push origin :{} && git branch -d {}'
-    cc = !"if [ -z \"$(git s)\" ]; then git cod && git pull && git mc; else echo 'Not commited files' >&2; ! :; fi"
+    cc = !"if [ -z \"$(git d)\" ]; then git cod && git pull && git mc; else echo 'Not commited files' >&2; ! :; fi"
     cob = checkout -b
 
 [include]
