git のサブコマンドを修正

--- a/.gitconfig
+++ b/.gitconfig
@@ -25,16 +25,18 @@
     s  = status --short
     bb = backup-branch
     ca = commit --amend
+    cc = clean-checkout
     co = checkout --quiet
     cp = cherry-pick
     dc = diff --cached
-    fs = flow feature start
     ff = flow feature finish
-    ms = merge --squash
-    rs = flow release start
-    rf = flow release finish
+    fs = flow feature start
     mc = merged-clean
-    cc = clean-checkout
+    ms = merge --squash
+    pl = pull --ff-only
+    ps = push
+    rf = flow release finish
+    rs = flow release start
     aff = all-fast-forward-merge
     bbd = backup-delete
     cob = checkout -b
