git で CRLF を変換しないように

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,7 +3,7 @@
     name = KoharaKazuya
 [core]
     excludesfile = ~/.gitignore
-    autocrlf = input
+	autocrlf = false
     quotepath = false
     precomposeunicode = true
 [push]
