--- a/.zsh/.zimrc
+++ b/.zsh/.zimrc
@@ -1,3 +1,5 @@
+
+
 #################
 # CORE SETTINGS #
 #################
@@ -9,7 +11,7 @@
 # Select what modules you would like enabled.
 # The second line of modules may depend on options set by modules in the first line.
 # These dependencies are noted on the respective module's README.md.
-zmodules=(directory environment git history input utility custom
+zmodules=(directory environment git history input utility meta custom \
           syntax-highlighting history-substring-search prompt completion)
 
 
@@ -24,15 +26,39 @@ zmodules=(directory environment git history input utility custom
 # Set your desired prompt here
 zprompt_theme='gitster'
 
+#
+# Completion
+#
+
+# set an optional host-specific filename for the completion cache file
+# if none is provided, the default '.zcompdump' is used.
+#zcompdump_file=".zcompdump-${HOST}-${ZSH_VERSION}"
+
+#
+# Utility
+#
+
+# Uncomment to enable command correction prompts; 'setopt CORRECT'
+# See: http://zsh.sourceforge.net/Doc/Release/Options.html#Input_002fOutput
+#zcorrection='true'
+
+#
+# Input
+#
+
+# Uncomment to enable double-dot expansion.
+# This appends '../' to your input for each '.' you type after an initial '..'
+#zdouble_dot_expand='true'
 
 #
 # Syntax-Highlighting
 #
 
-# This determines what highlighters will be used with the completion module.
+# This determines what highlighters will be used with the syntax-highlighting module.
 # Documentation of the highlighters can be found here:
 #   https://github.com/zsh-users/zsh-syntax-highlighting/blob/master/docs/highlighters.md
-# For (u)rxvt users, disabling the 'cursor' highlighter will fix the disappearing cursor problem
+# For (u)rxvt, termite and gnome-terminal users,
+# removing the 'cursor' highlighter will fix the disappearing cursor problem
 zhighlighters=(main brackets cursor)
 
 
