--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,7 @@
     autocrlf = false
     quotepath = false
     precomposeunicode = true
+    ignorecase = false
 [push]
     default = current
 [remote]
