--- a/.gitconfig
+++ b/.gitconfig
@@ -31,7 +31,7 @@
     ca = commit --amend
     cc = clean-checkout
     co = checkout --quiet
-    cp = cherry-pick -x
+    cp = cherry-pick
     dc = diff --color-words --cached
     fc = first-commit
     ff = flow feature finish
