--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
     quotepath = false
     precomposeunicode = true
     ignorecase = false
+    attributesfile = ~/.gitattributes
 [push]
     default = current
 [remote]
