--- a/.gitconfig
+++ b/.gitconfig
@@ -27,6 +27,7 @@
     l  = log --oneline
     m  = merge --no-ff --no-edit
     s  = status --short
+    t  = temp
     bb = backup-branch
     bd = branch --delete
     ca = commit --amend
