git status で track されていないディレクトリ以下のファイルも表示するように

--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,8 @@
     precomposeunicode = true
     ignorecase = false
     attributesfile = ~/.gitattributes
+[status]
+    showUntrackedFiles = all
 [push]
     default = current
 [remote]
