--- a/.gitconfig
+++ b/.gitconfig
@@ -70,6 +70,11 @@
     contributors = shortlog -s -n
     filetrail = log --follow --oneline
 
+[filter "lfs"]
+    process = git-lfs filter-process
+    required = true
+    clean = git-lfs clean -- %f
+    smudge = git-lfs smudge -- %f
 [private]
     default-branch = master
 
