--- a/.gitconfig
+++ b/.gitconfig
@@ -30,6 +30,7 @@
     m  = merge --no-ff --no-edit
     s  = status --short
     t  = temp
+    ba = branch --all
     bb = backup-branch
     bd = branch --delete
     ca = commit --amend
