git config remote.pushDefault を削除
1. Git LFS で origin 以外に push する際にエラーとなるため
2. ユースケースにおいて git ps = git push origin であれば十分なため
3. git push でブランチによる branch.<name>.remote を使った打ち分けは一度も使ったことがないため

--- a/.gitconfig
+++ b/.gitconfig
@@ -12,8 +12,6 @@
     showUntrackedFiles = all
 [push]
     default = current
-[remote]
-    pushDefault = origin
 [gui]
     encoding = UTF-8
 [color]
@@ -44,7 +42,7 @@
     mc = merged-clean --all
     ms = merge --squash
     pl = pull --ff-only --prune
-    ps = push
+    ps = push origin
     rf = flow release finish
     rs = flow release start
     aff = all-fast-forward-merge
