git browse-remote を追加

--- a/.gitconfig
+++ b/.gitconfig
@@ -42,6 +42,7 @@
     mc = merged-clean --all
     ms = merge --squash
     pl = pull --ff-only --prune
+    pr = browse-remote
     ps = push origin
     rf = flow release finish
     rs = flow release start
