--- a/.zsh/.zimrc
+++ b/.zsh/.zimrc
@@ -11,7 +11,7 @@
 # Select what modules you would like enabled.
 # The second line of modules may depend on options set by modules in the first
 # line. These dependencies are noted on the respective module's README.md.
-zmodules=(directory environment git-info history input utility custom \
+zmodules=(directory git-info history input utility custom \
           prompt completion syntax-highlighting history-substring-search )
 
 
