git の日付表示をローカル時間で表示できるように

--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,8 @@
     attributesfile = ~/.gitattributes
 [status]
     showUntrackedFiles = all
+[log]
+    date = iso-local
 [push]
     default = current
 [gui]
