feat(git): git f で tag も取得するように

--- a/.gitconfig
+++ b/.gitconfig
@@ -27,7 +27,7 @@
     b  = branch
     c  = commit --message
     d  = diff --color-words
-    f  = fetch --all --prune
+    f  = fetch --all --prune --tags
     l  = log --oneline
     m  = merge --no-ff --no-edit
     s  = status --short
