feat(git): Git コミット時、コミットメッセージの初期表示としてコメントで良いコメントの書き方ガイドを表示する

--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,8 @@
     showUntrackedFiles = all
 [log]
     date = iso-local
+[commit]
+    template = ~/.gitmessage
 [push]
     default = current
 [gui]
