feat(git): git remove-pullrequest-checkout コマンドを追加する

--- a/.gitconfig
+++ b/.gitconfig
@@ -60,6 +60,7 @@
     reb = clean-rebase
     rev = rev-parse --short --default HEAD
     imgdiff = -c 'diff.image.command = imgdiff --reverse' -c 'core.pager =' diff --diff-filter=M
+    rmpr = remove-pullrequest-checkout
     # 人間らしいエイリアス (http://postd.cc/human-git-aliases/)
     unstage = reset --quiet HEAD --
     discard = checkout --
