feat(git): git sh で差分をわかりやすくした git show を実行できるようにする

--- a/.gitconfig
+++ b/.gitconfig
@@ -52,6 +52,7 @@
     ps = push origin
     rf = flow release finish
     rs = flow release start
+    sh = show --color-words='[a-zA-Z0-9]+|[^a-zA-Z0-9 ]+'
     aff = all-fast-forward-merge
     bbd = backup-delete
     cob = checkout -b
