--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,8 @@
     date = iso-local
 [commit]
     template = ~/.gitmessage
+[diff]
+    algorithm = histogram
 [push]
     default = current
 [gui]
