feat(git): v2.28+ でデフォルトブランチを main にする

--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,8 @@
     ignorecase = false
     attributesfile = ~/.gitattributes
     hooksPath = ~/projects/dotfiles/git-hooks
+[init]
+    defaultBranch = main
 [status]
     showUntrackedFiles = all
 [log]
