--- a/.zsh/.zimrc
+++ b/.zsh/.zimrc
@@ -17,9 +17,9 @@ zmodule utility
 #
 # Prompt
 #
+zmodule prompt-pwd
 # Exposes git repository status information to prompts.
 zmodule git-info
-# A customizable version of steeef's prompt theme.
 zmodule gitster
 
 # Additional completion definitions for Zsh.
@@ -27,13 +27,12 @@ zmodule zsh-users/zsh-completions
 # Enables and configures smart and extensive tab completion.
 # completion must be sourced after zsh-users/zsh-completions
 zmodule completion
-# Fish-like autosuggestions for Zsh.
-zmodule zsh-users/zsh-autosuggestions
 # Fish-like syntax highlighting for Zsh.
 # zsh-users/zsh-syntax-highlighting must be sourced after completion
 zmodule zsh-users/zsh-syntax-highlighting
 # Fish-like history search (up arrow) for Zsh.
 # zsh-users/zsh-history-substring-search must be sourced after zsh-users/zsh-syntax-highlighting
 zmodule zsh-users/zsh-history-substring-search
+# Fish-like autosuggestions for Zsh.
+zmodule zsh-users/zsh-autosuggestions
 # }}} End configuration added by Zim install
-
