refactor(zim): zsh-notifier を zim モジュールとして管理するように

--- a/.zsh/.zimrc
+++ b/.zsh/.zimrc
@@ -55,3 +55,6 @@ zmodule zsh-users/zsh-history-substring-search
 # Fish-like autosuggestions for Zsh.
 zmodule zsh-users/zsh-autosuggestions
 # }}} End configuration added by Zim install
+
+# 長時間動いていたコマンドの完了時にデスクトップ通知をする
+zmodule marzocchi/zsh-notify --name notify
